@@ -11,6 +11,10 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-12-04
+2013-11-12 Andy Salnikov
+- add support for declaration of methods returning arrays of enums
+
 Tag: V00-12-03
 2013-11-08 David Schneider
 - Translator backend: remove references to xml files
